Resolved dependancy issues that affected streamlit, keras, numpy, sklearn and tensorflow versions

--- a/crop_description.ipynb
+++ b/crop_description.ipynb
@@ -526,43 +526,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Agronomist notes: extensive Stems remain large...</td>\n",
+       "      <td>Agronomist notes: severe Spots enlarge and dev...</td>\n",
        "      <td>Tomato</td>\n",
        "      <td>Unhealthy</td>\n",
-       "      <td>Septoria_leaf_spot</td>\n",
-       "      <td>Bacillus subtilis</td>\n",
+       "      <td>Bacterial_spot</td>\n",
+       "      <td>Neem oil</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Agronomist notes: notable Yellow patches appea...</td>\n",
+       "      <td>Agronomist notes: clear Leaves look lush green...</td>\n",
        "      <td>Tomato</td>\n",
-       "      <td>Unhealthy</td>\n",
-       "      <td>Leaf_Mold</td>\n",
-       "      <td>Biological predators</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>healthy</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Farmer complains: rapid Overall appearance is ...</td>\n",
+       "      <td>sudden Dark concentric rings form on lower lea...</td>\n",
+       "      <td>Tomato</td>\n",
+       "      <td>Unhealthy</td>\n",
+       "      <td>Early_blight</td>\n",
+       "      <td>Neem oil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Farmer reports: extensive Plant canopy is full...</td>\n",
        "      <td>Pepper_bell</td>\n",
        "      <td>Healthy</td>\n",
        "      <td>healthy</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Farmer complains: notable Dark spots sometimes...</td>\n",
-       "      <td>Potato</td>\n",
-       "      <td>Unhealthy</td>\n",
-       "      <td>Early_blight</td>\n",
-       "      <td>Bacillus subtilis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Field observation shows: slight Plant stands t...</td>\n",
+       "      <td>Agronomist notes: slight Infested leaves drop ...</td>\n",
        "      <td>Tomato</td>\n",
-       "      <td>Healthy</td>\n",
-       "      <td>healthy</td>\n",
-       "      <td>None</td>\n",
+       "      <td>Unhealthy</td>\n",
+       "      <td>Spider_mites_Two_spotted_spider_mite</td>\n",
+       "      <td>Biological predators</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -570,18 +570,18 @@
       ],
       "text/plain": [
        "                                         description         crop     status  \\\n",
-       "0  Agronomist notes: extensive Stems remain large...       Tomato  Unhealthy   \n",
-       "1  Agronomist notes: notable Yellow patches appea...       Tomato  Unhealthy   \n",
-       "2  Farmer complains: rapid Overall appearance is ...  Pepper_bell    Healthy   \n",
-       "3  Farmer complains: notable Dark spots sometimes...       Potato  Unhealthy   \n",
-       "4  Field observation shows: slight Plant stands t...       Tomato    Healthy   \n",
+       "0  Agronomist notes: severe Spots enlarge and dev...       Tomato  Unhealthy   \n",
+       "1  Agronomist notes: clear Leaves look lush green...       Tomato    Healthy   \n",
+       "2  sudden Dark concentric rings form on lower lea...       Tomato  Unhealthy   \n",
+       "3  Farmer reports: extensive Plant canopy is full...  Pepper_bell    Healthy   \n",
+       "4  Agronomist notes: slight Infested leaves drop ...       Tomato  Unhealthy   \n",
        "\n",
-       "              disease recommended_pesticide  \n",
-       "0  Septoria_leaf_spot     Bacillus subtilis  \n",
-       "1           Leaf_Mold  Biological predators  \n",
-       "2             healthy                  None  \n",
-       "3        Early_blight     Bacillus subtilis  \n",
-       "4             healthy                  None  "
+       "                                disease recommended_pesticide  \n",
+       "0                        Bacterial_spot              Neem oil  \n",
+       "1                               healthy                  None  \n",
+       "2                          Early_blight              Neem oil  \n",
+       "3                               healthy                  None  \n",
+       "4  Spider_mites_Two_spotted_spider_mite  Biological predators  "
       ]
      },
      "execution_count": 9,
@@ -648,23 +648,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1745</th>\n",
-       "      <td>Inspection reveals: clear New growth appears s...</td>\n",
-       "      <td>Pepper_bell</td>\n",
+       "      <td>Farmer complains: visible Lesions become raise...</td>\n",
+       "      <td>Tomato</td>\n",
        "      <td>Unhealthy</td>\n",
        "      <td>Bacterial_spot</td>\n",
-       "      <td>Sulfur spray</td>\n",
+       "      <td>Neem oil</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1746</th>\n",
-       "      <td>Inspection reveals: sudden Stems are firm and ...</td>\n",
-       "      <td>Potato</td>\n",
-       "      <td>Healthy</td>\n",
-       "      <td>healthy</td>\n",
-       "      <td>None</td>\n",
+       "      <td>Field observation shows: moderate Lesions beco...</td>\n",
+       "      <td>Pepper_bell</td>\n",
+       "      <td>Unhealthy</td>\n",
+       "      <td>Bacterial_spot</td>\n",
+       "      <td>Biological predators</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1747</th>\n",
-       "      <td>rapid Mites thrive in hot, dry conditions. sli...</td>\n",
+       "      <td>Inspection reveals: clear Infestation begins o...</td>\n",
        "      <td>Tomato</td>\n",
        "      <td>Unhealthy</td>\n",
        "      <td>Spider_mites_Two_spotted_spider_mite</td>\n",
@@ -672,19 +672,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1748</th>\n",
-       "      <td>Farmer reports: severe Lower leaves drop prema...</td>\n",
-       "      <td>Pepper_bell</td>\n",
-       "      <td>Unhealthy</td>\n",
-       "      <td>Bacterial_spot</td>\n",
-       "      <td>Sulfur spray</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1749</th>\n",
-       "      <td>Field observation shows: rapid Fruits develop ...</td>\n",
+       "      <td>Inspection reveals: severe Stems appear firm a...</td>\n",
        "      <td>Pepper_bell</td>\n",
        "      <td>Healthy</td>\n",
        "      <td>healthy</td>\n",
        "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1749</th>\n",
+       "      <td>Farmer complains: clear Symptoms worsen under ...</td>\n",
+       "      <td>Tomato</td>\n",
+       "      <td>Unhealthy</td>\n",
+       "      <td>Tomato_mosaic_virus</td>\n",
+       "      <td>Bacillus subtilis</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -692,18 +692,18 @@
       ],
       "text/plain": [
        "                                            description         crop  \\\n",
-       "1745  Inspection reveals: clear New growth appears s...  Pepper_bell   \n",
-       "1746  Inspection reveals: sudden Stems are firm and ...       Potato   \n",
-       "1747  rapid Mites thrive in hot, dry conditions. sli...       Tomato   \n",
-       "1748  Farmer reports: severe Lower leaves drop prema...  Pepper_bell   \n",
-       "1749  Field observation shows: rapid Fruits develop ...  Pepper_bell   \n",
+       "1745  Farmer complains: visible Lesions become raise...       Tomato   \n",
+       "1746  Field observation shows: moderate Lesions beco...  Pepper_bell   \n",
+       "1747  Inspection reveals: clear Infestation begins o...       Tomato   \n",
+       "1748  Inspection reveals: severe Stems appear firm a...  Pepper_bell   \n",
+       "1749  Farmer complains: clear Symptoms worsen under ...       Tomato   \n",
        "\n",
        "         status                               disease recommended_pesticide  \n",
-       "1745  Unhealthy                        Bacterial_spot          Sulfur spray  \n",
-       "1746    Healthy                               healthy                  None  \n",
+       "1745  Unhealthy                        Bacterial_spot              Neem oil  \n",
+       "1746  Unhealthy                        Bacterial_spot  Biological predators  \n",
        "1747  Unhealthy  Spider_mites_Two_spotted_spider_mite  Biological predators  \n",
-       "1748  Unhealthy                        Bacterial_spot          Sulfur spray  \n",
-       "1749    Healthy                               healthy                  None  "
+       "1748    Healthy                               healthy                  None  \n",
+       "1749  Unhealthy                   Tomato_mosaic_virus     Bacillus subtilis  "
       ]
      },
      "execution_count": 10,
@@ -739,7 +739,7 @@
     {
      "data": {
       "text/plain": [
-       "16"
+       "15"
       ]
      },
      "execution_count": 11,
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "id": "BJBIR2rpvPa-"
    },
@@ -784,11 +784,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting joblib\n",
-      "  Downloading joblib-1.5.1-py3-none-any.whl.metadata (5.6 kB)\n",
-      "Downloading joblib-1.5.1-py3-none-any.whl (307 kB)\n",
-      "Installing collected packages: joblib\n",
-      "Successfully installed joblib-1.5.1\n"
+      "Requirement already satisfied: joblib in c:\\users\\pinchezz\\anaconda3\\envs\\learn-env\\lib\\site-packages (1.5.1)\n"
      ]
     },
     {
@@ -797,7 +793,7 @@
        "['pesticide_dict.pkl']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,9 +820,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python [conda env:myenv]",
+   "display_name": "Python (learn-env)",
    "language": "python",
-   "name": "conda-env-myenv-py"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -838,7 +834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
